<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.pos.petra.app.Views.TypefacedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_a"
        android:layout_marginLeft="@dimen/size_10"
        android:gravity="center_vertical"
        android:text="@string/title_memeber_signup"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_b"
        android:paddingLeft="@dimen/size_50"
        android:paddingRight="@dimen/size_50"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">
                <com.pos.petra.app.Views.TypefacedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:text="@string/your_name"
                    android:textSize="@dimen/normal_text"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/ink_blue" />
                <com.pos.petra.app.Views.TypefacedEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="right"
                    android:hint="@string/name"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/size_5"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/name_text" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">
                <com.pos.petra.app.Views.TypefacedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:text="@string/number"
                    android:textSize="@dimen/normal_text"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/ink_blue" />
                <com.pos.petra.app.Views.TypefacedEditText
                    android:id="@+id/edt_signup_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="right"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:maxLength="14"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginRight="@dimen/size_5"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/name_text" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">
                <com.pos.petra.app.Views.TypefacedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:text="@string/hint_email"
                    android:textSize="@dimen/normal_text"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/ink_blue" />
                <com.pos.petra.app.Views.TypefacedEditText
                    android:id="@+id/edt_signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="right"
                    android:hint="@string/valid_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/size_5"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/name_text" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">
                <com.pos.petra.app.Views.TypefacedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:text="@string/hint_pin"
                    android:textSize="@dimen/normal_text"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/ink_blue" />
                <com.pos.petra.app.Views.TypefacedEditText
                    android:id="@+id/edt_signup_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="right"
                    android:hint="@string/digit_pin"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/size_5"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/name_text" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="horizontal">
                <com.pos.petra.app.Views.TypefacedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10"
                    android:text="@string/confirm_pin"
                    android:textSize="@dimen/normal_text"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/ink_blue" />
                <com.pos.petra.app.Views.TypefacedEditText
                    android:id="@+id/edt_pin_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="right"
                    android:hint="@string/hint_confirm_pin"
                    android:imeOptions="actionDone"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_marginRight="@dimen/size_5"
                    android:layout_weight="1"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/name_text" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_d"
        android:orientation="horizontal">

        <com.pos.petra.app.Views.TypefacedButton
            android:id="@+id/btn_signup_signin"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:paddingTop="@dimen/margin_b"
            android:paddingBottom="@dimen/margin_b"
            android:text="@string/signin"
            android:layout_weight="1"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/normal_text" />

        <com.pos.petra.app.Views.TypefacedButton
            android:id="@+id/btn_signup_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/dark_grey"
            android:paddingTop="@dimen/margin_b"
            android:paddingBottom="@dimen/margin_b"
            android:text="@string/signup"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text" />

    </LinearLayout>
</LinearLayout>